--- a/pages/consoles.html
+++ b/pages/consoles.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Consolas - Eternal Gamers</title>
@@ -278,12 +278,11 @@
     <footer class="mt-5 text-light mainFooter">
         <div class="row">
             <!-- ANCHOR Columna 1 -->
-            <article class="col-sm-12 col-md-4 col-lg-4 text-center text-lg-left">
+            <article class="col-sm-12 col-md-4 col-lg-4 text-center text-lg-start">
                 <h3 class="capitalize fontJura">Sobre Nosotros</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga reiciendis ad aut facere
-                    consectetur
-                    aperiam ipsa ullam ut sapiente quisquam, illo officia quo accusantium, tempore amet in eveniet
-                    aspernatur voluptatum?</p>
+                <p>
+                    Eternal Gamers es tu web favorita en videojuegos. Contamos con noticias, análisis de los últimos lanzamientos, imágenes, trailers oficiales y más…
+                </p>
                 <h4 class="capitalize fontJura">Seguinos en nuestras redes sociales</h4>
                 <div class="socialIcons">
                     <a class="text-light" href="#"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
@@ -292,7 +291,7 @@
                 </div>
             </article>
             <!-- ANCHOR Columna 2 -->
-            <article class="col-md-2 d-none d-lg-block">
+            <article class="col-md-2 d-none d-lg-flex flex-column align-items-center">
                 <h4 class="capitalize fontJura">Navegar</h4>
                 <ul class="listSquare listInside">
                     <li>
@@ -313,30 +312,28 @@
                 </ul>
             </article>
             <!-- ANCHOR Columna 3 -->
-            <article class="col-md-4 col-lg-3 text-center text-lg-left mt-5 mt-md-0">
+            <article class="col-md-4 col-lg-3 text-center text-lg-start mt-5 mt-md-0">
                 <div class="headerLogo">
                     <div>
                         <a href="index.html" class="text-light">
                             <h1 class="fontQuanticoBold">ETERNAL GAMERS</h1>
                         </a>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui hic fugit voluptate aperiam
-                            optio.
-                            Odit mollitia quasi nostrum consequatur accusamus consequuntur delectus nulla vitae
-                            veritatis!
-                            Inventore laudantium illum similique blanditiis.</p>
+                        <p>
+                            Obra de gamers para gamers.
+                        </p>
                     </div>
                 </div>
             </article>
             <!-- ANCHOR Columna 4 -->
-            <article class="col-md-4 col-lg-3 text-center text-lg-right mt-5 mt-md-0">
+            <article class="col-md-4 col-lg-3 text-center text-lg-end mt-5 mt-md-0">
                 <h4 class="capitalize fontJura">Sobre el autor de esta página</h4>
                 <p><a class="text-light" href="mailto:josuebaez61@gmail.com?subject=Contacto"><i
                             class="fa fa-envelope fa-fw"></i> josuebaez@gmail.com</a></p>
                 <p><em>Encontrame en mis redes sociales...</em></p>
                 <div class="socialIcons">
-                    <a class="text-light" href="#"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
-                    <a class="text-light" href="#"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
-                    <a class="text-light" href="#"><i class="fa fa-linkedin fa-fw" aria-hidden="true"></i></a>
+                    <a class="text-light" href="https://www.facebook.com/josueDev61"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
+                    <a class="text-light" href="https://www.instagram.com/josuebaez61/"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
+                    <a class="text-light" href="www.linkedin.com/in/josuebaez15"><i class="fa fa-linkedin fa-fw" aria-hidden="true"></i></a>
                 </div>
                 <p><em>Josue Baez</em></p>
             </article>
