--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <!-- <link rel="stylesheet" href="../css/styles.css"> -->
+    <link rel="stylesheet" href="../css/test.css">
     <title>Inicio - Eternal Gamers</title>
 </head>
 
@@ -15,29 +16,30 @@
     <!-- ============================================= -->
     <!-- SECTION Header -->
     <!-- ============================================= -->
-    <header class="stickyHeader">
-        <nav class="navbar navbar-expand-md text-light p-0 topNavbar">
+    <header class="topheader">
+        <nav class="topheader__nav navbar text-light p-0">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html"><i class="fas fa-bars fa-fw"></i> NAVEGAR</a>
+                <li class="topheader__item nav-item">
+                    <a class="nav-link" href="index.html"><i class="fas fa-bars fa-fw"></i> <span
+                            class="d-none d-lg-inline">NAVEGAR</span></a>
                     <!-- ANCHOR Sub-menu -->
-                    <ul>
-                        <li>
+                    <ul class="topheader__submenu">
+                        <li class="topheader__submenu-item">
                             <a class="nav-link" href="../index.html"> <i class="fas fa-home fa-fw"></i>
                                 Inicio</a>
                         </li>
-                        <li>
+                        <li class="topheader__submenu-item">
                             <a class="nav-link" href="pc.html"><i class="fas fa-desktop fa-fw"></i> PC</a>
                         </li>
-                        <li>
+                        <li class="topheader__submenu-item">
                             <a class="nav-link" href="consoles.html"><i class="fas fa-gamepad fa-fw"></i>
                                 Consolas</a>
                         </li>
-                        <li>
+                        <li class="topheader__submenu-item">
                             <a class="nav-link" href="mobiles.html"><i class="fas fa-mobile-alt fa-fw"></i>
                                 Móviles</a>
                         </li>
-                        <li>
+                        <li class="topheader__submenu-item">
                             <a class="nav-link" href="contact.html"><i class="far fa-envelope fa-fw"></i></i>
                                 Contacto</a>
                         </li>
@@ -45,8 +47,8 @@
                 </li>
             </ul>
             <!-- ANCHOR logo -->
-            <a class="navbar-brand text-light" href="../index.html" class="ml-3 text-light">
-                <h1 class="d-none d-md-block fontQuanticoBold m-0">ETERNAL GAMERS</h1>
+            <a class="navbar-brand topheader__logo" href="../index.html">
+                <h1>ETERNAL GAMERS</h1>
             </a>
         </nav>
     </header>
@@ -57,8 +59,15 @@
     <!-- ============================================= -->
     <!-- SECTION Main Container -->
     <!-- ============================================= -->
-    <main class="cod_background">
-        <section class="container mt-3 text-light containerBorderRadius bgMainBlack">
+    <main class="mainblock mainblock--cod">
+        <section class="mainblock__content container">
+            <!-- ANCHOR breadcrumb -->
+            <div class="d-flex justify-content-end text-end fontJura container breadcrumb-custom-block">
+                <ol class="breadcrumb breadcrumb-custom-block__ol">
+                    <li class="breadcrumb-item breadcrumb-custom-block__item"><a href="../index.html">Inicio</a></li>
+                    <li class="breadcrumb-item breadcrumb-custom-block__item" aria-current="page">Contacto</li>
+                </ol>
+            </div>
             <div class="row">
                 <div class="col">
                     <h1 class="red-underline">Formulario de contacto</h1>
@@ -77,9 +86,8 @@
                             <label for="text">Mensaje</label>
                             <textarea class="form-control" id="text" name="text" rows="5"></textarea>
                         </div>
-                        <div class="form-group">
-                            <input class="btn btn-block btn-lg btn-outline-danger text-light" type="submit"
-                                value="Enviar">
+                        <div class="form-group d-grid gap-2 mt-3">
+                            <input class="btn btn-lg btn-outline-danger text-light" type="submit" value="Enviar">
                         </div>
                     </form>
                 </div>
@@ -93,68 +101,64 @@
     <!-- ============================================= -->
     <!-- SECTION Footer -->
     <!-- ============================================= -->
-    <footer class="mt-5 text-light mainFooter">
+    <footer class="mainfooter mt-5 text-light">
         <div class="row">
             <!-- ANCHOR Columna 1 -->
-            <article class="col-sm-12 col-md-4 col-lg-4 text-center text-lg-left">
+            <article class="mainfooter__column col-sm-12 col-md-4 col-lg-4 text-center text-lg-start">
                 <h3 class="capitalize fontJura">Sobre Nosotros</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga reiciendis ad aut facere
-                    consectetur
-                    aperiam ipsa ullam ut sapiente quisquam, illo officia quo accusantium, tempore amet in eveniet
-                    aspernatur voluptatum?</p>
-                <h4 class="capitalize fontJura">Seguinos en nuestras redes sociales</h4>
-                <div class="socialIcons">
-                    <a class="text-light" href="#"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
-                    <a class="text-light" href="#"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></a>
-                    <a class="text-light" href="#"><i class="fa fa-youtube fa-fw" aria-hidden="true"></i></a>
-                </div>
+                <p>
+                    Eternal Gamers es tu web favorita en videojuegos. Contamos con noticias, análisis de los últimos
+                    lanzamientos, imágenes, trailers oficiales y más…
+                </p>
+                <h4 class="capitalize">Seguinos en nuestras redes sociales</h4>
+                <a class="mainfooter__social-icon" href="#"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
+                <a class="mainfooter__social-icon" href="#"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></a>
+                <a class="mainfooter__social-icon" href="#"><i class="fa fa-youtube fa-fw" aria-hidden="true"></i></a>
             </article>
             <!-- ANCHOR Columna 2 -->
-            <article class="col-md-2 d-none d-lg-block">
+            <article class="mainfooter__column col-md-2 d-none d-lg-flex flex-column align-items-center">
                 <h4 class="capitalize fontJura">Navegar</h4>
                 <ul class="listSquare listInside">
                     <li>
-                        <a class="text-light" class="" href="index.html">Inicio</a>
+                        <a class="text-light" class="" href="../index.html">Inicio</a>
                     </li>
                     <li>
-                        <a class="text-light" href="pages/pc.html">PC</a>
+                        <a class="text-light" href="pc.html">PC</a>
                     </li>
                     <li>
-                        <a class="text-light" href="pages/consoles.html">Consolas</a>
+                        <a class="text-light" href="consoles.html">Consolas</a>
                     </li>
                     <li>
-                        <a class="text-light" href="pages/mobiles.html">Móviles</a>
+                        <a class="text-light" href="mobiles.html">Móviles</a>
                     </li>
                     <li>
-                        <a class="text-light" href="pages/contact.html">Contacto</a>
+                        <a class="text-light" href="contact.html">Contacto</a>
                     </li>
                 </ul>
             </article>
             <!-- ANCHOR Columna 3 -->
-            <article class="col-md-4 col-lg-3 text-center text-lg-left mt-5 mt-md-0">
+            <article class="mainfooter__column col-md-4 col-lg-3 text-center text-lg-start mt-5 mt-md-0">
                 <div class="headerLogo">
                     <div>
                         <a href="index.html" class="text-light">
-                            <h1 class="fontQuanticoBold">ETERNAL GAMERS</h1>
+                            <h1>ETERNAL GAMERS</h1>
                         </a>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui hic fugit voluptate aperiam
-                            optio.
-                            Odit mollitia quasi nostrum consequatur accusamus consequuntur delectus nulla vitae
-                            veritatis!
-                            Inventore laudantium illum similique blanditiis.</p>
                     </div>
                 </div>
             </article>
             <!-- ANCHOR Columna 4 -->
-            <article class="col-md-4 col-lg-3 text-center text-lg-right mt-5 mt-md-0">
+            <article class="mainfooter__column col-md-4 col-lg-3 text-center text-lg-end mt-5 mt-md-0">
                 <h4 class="capitalize fontJura">Sobre el autor de esta página</h4>
                 <p><a class="text-light" href="mailto:josuebaez61@gmail.com?subject=Contacto"><i
                             class="fa fa-envelope fa-fw"></i> josuebaez@gmail.com</a></p>
                 <p><em>Encontrame en mis redes sociales...</em></p>
                 <div class="socialIcons">
-                    <a class="text-light" href="#"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
-                    <a class="text-light" href="#"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
-                    <a class="text-light" href="#"><i class="fa fa-linkedin fa-fw" aria-hidden="true"></i></a>
+                    <a class="mainfooter__social-icon" href="https://www.facebook.com/josueDev61"><i
+                            class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
+                    <a class="mainfooter__social-icon" href="https://www.instagram.com/josuebaez61/"><i
+                            class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
+                    <a class="mainfooter__social-icon" href="www.linkedin.com/in/josuebaez15"><i
+                            class="fa fa-linkedin fa-fw" aria-hidden="true"></i></a>
                 </div>
                 <p><em>Josue Baez</em></p>
             </article>
