--- a/pages/consoles.html
+++ b/pages/consoles.html
@@ -41,8 +41,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" type="text/css" href="../plugins/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="../plugins/slick/slick-theme.css" />
-    <!-- <link rel="stylesheet" href="../css/styles.css"> -->
-    <link rel="stylesheet" href="../css/test.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Eternal Gamers | PC</title>
 </head>
 
