--- a/pages/pc.html
+++ b/pages/pc.html
@@ -41,8 +41,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" type="text/css" href="../plugins/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="../plugins/slick/slick-theme.css" />
-    <!-- <link rel="stylesheet" href="../css/styles.css"> -->
-    <link rel="stylesheet" href="../css/test.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Eternal Gamers | PC</title>
 </head>
 
@@ -68,10 +67,6 @@
                         <li class="topheader__submenu-item">
                             <a class="nav-link" href="consoles.html"><i class="fas fa-gamepad fa-fw"></i>
                                 Consolas</a>
-                        </li>
-                        <li class="topheader__submenu-item">
-                            <a class="nav-link" href="mobiles.html"><i class="fas fa-mobile-alt fa-fw"></i>
-                                Móviles</a>
                         </li>
                         <li class="topheader__submenu-item">
                             <a class="nav-link" href="contact.html"><i class="far fa-envelope fa-fw"></i></i>
